# LatticePrime

./: .gitignore  LICENSE  README.md  lp_main.py  pyproject.toml
configs/: lp_config.json  lp_redline.json
lp_core/: discovery_kernel.py  enc_estimator.py  governor.py  harvester_kernel.py  hypothesis_engine.py  merkle.py  placebo_channels.py  redeemer.py  retooler.py  utils.py
ops/: rotate_ledger.sh  run_local.sh
